--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_shopping_list">ShoppingListActivity</string>
     <string name="title_activity_new_item">NewItemActivity</string>
+    <string name="title_activity_shopping">ShoppingActivity</string>
 </resources>
